Help: Document more cases lit terrains. Linkify oasis

--- a/data/core/help.cfg
+++ b/data/core/help.cfg
@@ -351,7 +351,9 @@ The current time of day can be observed under the minimap in the status pane. Fo
 " + "
 <img>src=misc/time-schedules/schedule-underground-illum.png align=right float=yes</img>" + _"Some underground locations are illuminated. They are perpetually intermediate between day and night.
 " + "
-<img>src=misc/time-schedules/schedule-indoors.png align=right float=yes</img>" + _"Some role-playing scenarios take place indoors — these regions are similarly intermediate."
+<img>src=misc/time-schedules/schedule-indoors.png align=right float=yes</img>" + _"Some role-playing scenarios take place indoors — these regions are similarly intermediate.
+" + "
+<img>src=misc/time-schedules/default/schedule-firstwatch.png~BLIT(misc/tod-bright.png) align=right float=yes</img>" + _"Finally, units with the <ref>dst='ability_illuminationilluminates' text='illuminates'</ref> ability and terrain features such as <ref>dst='terrain_lava' text='lava'</ref> change the time of day bonus around them."
     [/topic]
     # wmllint: markcheck on
 
@@ -362,7 +364,7 @@ The current time of day can be observed under the minimap in the status pane. Fo
         text= _ "In combat, your units will inevitably take damage. There are several ways to heal your units. However, with the exception of resting, these do not stack; only one can occur per turn." + _ "
 
 • <bold>text='Resting'</bold>: A unit which neither moves, attacks, nor is attacked will heal 2 HP in its next turn." + _ "
-• <bold>text='Villages'</bold>: A unit which starts a turn in a village or oasis will heal 8HP. If the unit is poisoned, the poison will be cured instead." + _ "
+• <bold>text='Villages'</bold>: A unit which starts a turn in a village or <ref>dst='terrain_oasis' text='oasis'</ref> foo will heal 8HP. If the unit is poisoned, the poison will be cured instead." + _ "
 • <ref>dst='ability_regeneratesregenerates' text='Regeneration'</ref>: Certain units (such as trolls) will automatically heal 8HP every turn. If the unit is poisoned, the poison will be cured instead." + _ "
 • <bold>text='Healing units'</bold>: Units with the <ref>dst='ability_healingheals +4' text='Heals'</ref> ability will heal each allied adjacent unit, usually <ref>dst='ability_healingheals +4' text='4HP'</ref> or <ref>dst='ability_healingheals +8' text='8HP'</ref> per turn, or prevent Poison from causing that unit damage." + _ "
 • <bold>text='Curing units'</bold>: Units with the <ref>dst='ability_curingcures' text='cures'</ref> ability will cure Poison in all allied adjacent units (in preference to healing, if it has that ability as well)." + _ "
