AoI S1: Hint about recruiting a healer, if the player doesn't have any
This is just a hint on the general principle that it's good to have a healer.

When playing on easy, there's not much experience available in this first
scenario. Any hints about leveling units probably belong in S2 or later,
which also has the advantage of being able to talk about the enemies in S2.

--- a/data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg
+++ b/data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg
@@ -163,6 +163,8 @@
             x=15,14,14,13,12,11,10
             y=18,18,19,20,20,20,20
         [/move_unit_fake]
+
+        {VARIABLE has_recruited_healers no}
     [/event]
 
     [event]
@@ -171,6 +173,61 @@
         [message]
             speaker=Erlornas
             message= _ "Look at them. Big, slow, clumsy and hardly a bow in hand. Keep to the trees, use your arrows and the day will be ours."
+        [/message]
+    [/event]
+
+    # Give the player a hint to recruit healers, if they haven't already. No hints about leveling her - when playing on easy, they're unlikely to get enough XP.
+    [event]
+        name=recruit
+        [filter]
+            side=1
+            type=Elvish Shaman
+        [/filter]
+        {VARIABLE has_recruited_healers yes}
+    [/event]
+    [event]
+        name=turn 5
+        [filter_condition]
+            [have_unit]
+                type=Elvish Shaman,Elvish Druid
+                count=0
+            [/have_unit]
+            [have_unit]
+                # if they have less than 5 surviving units, then it's the wrong time to hint about healers
+                side=1
+                count=5-99999
+            [/have_unit]
+        [/filter_condition]
+
+        [message]
+            race=elf
+            [not]
+                id=Erlornas
+            [/not]
+            # po: the player hasn't recruited any Shamans. This message isn't shown if they have a Shaman, even if she has 0 xp.
+            message= _ "My lord, none of our healers have experience on the battlefield. It pleases me that they are safe, but if we should embark on a campaign then we will surely need them alongside us in the battles ahead."
+            female_message= _ "female^My lord, none of our healers have experience on the battlefield. It pleases me that they are safe, but if we should embark on a campaign then we will surely need them alongside us in the battles ahead."
+            [show_if]
+                [variable]
+                    name=has_recruited_healers
+                    boolean_equals=no
+                [/variable]
+            [/show_if]
+        [/message]
+        [message]
+            race=elf
+            [not]
+                id=Erlornas
+            [/not]
+            # po: the player has recruited some Shamans but has lost all them (or managed to level a Sorceress)
+            message= _ "My lord, none of our surviving healers have experience on the battlefield. It pains me to suggest that we should risk another, but if we should embark on a campaign then we will surely need them alongside us in the battles ahead."
+            female_message= _ "female^My lord, none of our surviving healers have experience on the battlefield. It pains me to suggest that we should risk another, but if we should embark on a campaign then we will surely need them alongside us in the battles ahead."
+            [show_if]
+                [variable]
+                    name=has_recruited_healers
+                    boolean_equals=yes
+                [/variable]
+            [/show_if]
         [/message]
     [/event]
 
@@ -269,5 +326,7 @@
             bonus=yes
             {NEW_GOLD_CARRYOVER 40}
         [/endlevel]
+
+        {CLEAR_VARIABLE has_recruited_healers}
     [/event]
 [/scenario]
