Better implementation of placing the clock (resolves #3582)

--- a/data/themes/default.cfg
+++ b/data/themes/default.cfg
@@ -501,6 +501,19 @@
             [/unit_weapons]
         [/status]
 
+        # If the device has no battery, remove the battery charge indicator
+        # and move the timer to its position.
+        [no_battery]
+            [remove]
+                id=battery
+            [/remove]
+            [change]
+                id=report_countdown
+                ref=battery-box-center
+                rect="=+5,=-3,+80,+18"
+            [/change]
+        [/no_battery]
+
         {REPLAY_THEME {DEFAULT_FONT_SMALL}}
     [/resolution]
 
