--- a/data/themes/_initial.cfg
+++ b/data/themes/_initial.cfg
@@ -391,7 +391,7 @@
 
 #define COUNTDOWN_THEME_STATUS FONT_SMALL_SIZE
     [report_countdown]
-        id=report_timeout
+        id=report_countdown
         font_size={FONT_SMALL_SIZE}
         ref=timeout-box-center
         rect="=,=-3,+80,+20"
