TSG S8a: fixed dialogue typos/bugs

--- a/data/campaigns/The_South_Guard/scenarios/08a_Return_to_Kerlath.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08a_Return_to_Kerlath.cfg
@@ -296,7 +296,7 @@
         [/message]
         [message]
             speaker=unit
-            message= _"Your orders hold no longer hold any weight, friend of the tree-killers. If you will not withdraw, we will kill you along with them!"
+            message= _"Your orders no longer hold any weight, friend of the tree-killers. If you will not withdraw, we will kill you along with them!"
         [/message]
         [message]
             id=Deoran
@@ -394,7 +394,7 @@
         [/unit]
 
         [message]
-            role=Liryn
+            speaker=Liryn
             message= _ "Halt! Who comes to the border of Wesnoth?"
         [/message]
 
@@ -404,7 +404,7 @@
         [/message]
 
         [message]
-            role=Liryn
+            speaker=Liryn
             message= _ "Deoran? It truly is you? We had thought you had been lost to the undead."
         [/message]
 
@@ -414,7 +414,7 @@
         [/message]
 
         [message]
-            role=Liryn
+            speaker=Liryn
             message= _ "This is wonderful news, commander! I shall spread word about your heroic deed! But... I am afraid there is another problem. There are rumors of trouble with the elves of the Aethenwood."
         [/message]
 
