--- a/data/gui/window/preferences/02_hotkeys.cfg
+++ b/data/gui/window/preferences/02_hotkeys.cfg
@@ -41,6 +41,36 @@
 
 				[/row]
 
+				[row]
+
+					[column]
+						grow_factor = 0
+						border = "all"
+						border_size = 5
+
+						[label]
+							definition = "default"
+							label = _ "Search:"
+						[/label]
+					[/column]
+
+					[column]
+						grow_factor = 1
+						border = "all"
+						border_size = 5
+						horizontal_grow = true
+
+						[text_box]
+							id = "filter"
+							definition = "default"
+
+							tooltip = _ "Filters on addon description, version, type or author."
+							{FITER_TEXT_BOX_HINT}
+						[/text_box]
+					[/column]
+
+				[/row]
+
 			[/grid]
 
 		[/column]
