Tips: Add two tips based on discussion on #3683

--- a/data/tips.cfg
+++ b/data/tips.cfg
@@ -253,6 +253,14 @@
     text= _ "You must accept some losses in battle. It is not uncommon for beginners to lose sight of victory as they attempt to keep every unit alive."
     source= _ "<i>― Queen Asheviere, 503YW</i>"
 [/tip]
+[tip]
+    text= _ "Using lower-level units can be very cost-effective."
+    source= _ "<i>― The Wesnoth Tactical Guide</i>"
+[/tip]
+[tip]
+    text= _ "Some higher-level units have inimitable abilities such as <i>Leadership</i>, <i>Cures</i>, or <i>Nightstalk</i>. Advancing those units early can make a big difference in a campaign."
+    source= _ "<i>― Sir Gerrick of Westin, 607YW"
+[/tip]
 #ifdef __UNUSED__
 [tip]
     text= _ "<i>Feral</i> units, such as Bats and wild animals, will avoid villages. Even if they occupy a village hex, they do not gain any defensive benefits from the village, although they will still be healed."
