fixup! Tips: Add two tips based on discussion on #3683

--- a/data/tips.cfg
+++ b/data/tips.cfg
@@ -259,7 +259,7 @@
 [/tip]
 [tip]
     text= _ "Some higher-level units have inimitable abilities such as <i>Leadership</i>, <i>Cures</i>, or <i>Nightstalk</i>. Advancing those units early can make a big difference in a campaign."
-    source= _ "<i>― Sir Gerrick of Westin, 607YW"
+    source= _ "<i>― Sir Gerrick of Westin, 607YW</i>"
 [/tip]
 #ifdef __UNUSED__
 [tip]
