Run WML schema validation in travis. Fixes #3709
This adds running the WML schema validation in travis.  It also updates the schema itself and fixes a few WML errors so that core and all campaigns under all difficulties pass the schema validation.

--- a/data/campaigns/Legend_of_Wesmere/utils/map-utils.cfg
+++ b/data/campaigns/Legend_of_Wesmere/utils/map-utils.cfg
@@ -56,11 +56,11 @@
         [/do]
     [/foreach]
 
-    [replace_map]
+    [replace_map_section]
         x={X_SPAN}
         y={Y_SPAN}
         {LOW_MAP {MAP}}
-    [/replace_map]
+    [/replace_map_section]
     [shift_labels]
         x={OFFSET_X}
         y={OFFSET_Y}
