--- a/data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg
@@ -2342,7 +2342,7 @@
 
         [message]
             speaker=Tallin
-            0message= _ "Get those doors open!"
+            message= _ "Get those doors open!"
         [/message]
 
         [sound]
