--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -1175,6 +1175,8 @@
 			{DEFAULT_KEY fire_event s_bool no}
 			{DEFAULT_KEY check_passability s_bool yes}
 			{SIMPLE_KEY facing dir}
+			{SIMPLE_KEY x s_coordinates}
+			{SIMPLE_KEY y s_coordinates}
 		[/tag]
 	[/tag]
 	[tag]
