--- a/data/schema/core/addons.cfg
+++ b/data/schema/core/addons.cfg
@@ -313,6 +313,8 @@
 	{SIMPLE_KEY force_lock_settings bool}
 	[tag]
 		name="story"
+		max=infinite
+		{SIMPLE_KEY title string}
 		{INSERT_TAG}
 		# TODO: Is this really recognized at story toplevel? Wiki claims it is.
 		[tag]
@@ -428,8 +430,8 @@
 	[tag]
 		name="label"
 		max=infinite
-		{SIMPLE_KEY x s_int}
-		{SIMPLE_KEY y s_int}
+		{SIMPLE_KEY x s_range_list}
+		{SIMPLE_KEY y s_range_list}
 		{SIMPLE_KEY text t_string}
 		{SIMPLE_KEY tooltip t_string} # Is this documented?
 		{SIMPLE_KEY immutable s_bool}
