--- a/data/schema/units/abilities.cfg
+++ b/data/schema/units/abilities.cfg
@@ -106,6 +106,18 @@
 	[/tag]
 [/tag]
 [tag]
+	name="chance_to_hit"
+	max=infinite
+	super="units/unit_type/abilities/~value~"
+	{FILTER_TAG "filter_opponent" unit ()}
+[/tag]
+[tag]
+	name="firststrike"
+	max=infinite
+	super="units/unit_type/abilities/~generic~"
+	{FILTER_TAG "filter_second_weapon" weapon ()}
+[/tag]
+[tag]
 	name="*"
 	max=infinite
 	super="units/unit_type/abilities/~generic~"
