--- a/data/schema/units/specials.cfg
+++ b/data/schema/units/specials.cfg
@@ -15,7 +15,7 @@
 	{FILTER_TAG "filter_adjacent_loation" adjacent_location ()}
 	{FILTER_TAG "filter_self" unit {FILTER_TAG "filter_weapon" weapon ()}}
 	{FILTER_TAG "filter_opponent" unit {FILTER_TAG "filter_weapon" weapon ()}}
-	{FILTER_TAG "filter_atacker" unit {FILTER_TAG "filter_weapon" weapon ()}}
+	{FILTER_TAG "filter_attacker" unit {FILTER_TAG "filter_weapon" weapon ()}}
 	{FILTER_TAG "filter_defender" unit {FILTER_TAG "filter_weapon" weapon ()}}
 	{WML_MERGE_KEYS}
 [/tag]
