--- a/data/schema/units/types.cfg
+++ b/data/schema/units/types.cfg
@@ -37,6 +37,8 @@
 	{SIMPLE_KEY usage ai_usage}
 	{SIMPLE_KEY vision int}
 	{SIMPLE_KEY xp_bar_scaling real}
+	{SIMPLE_KEY bar_offset_x int}
+	{SIMPLE_KEY bar_offset_y int}
 	{SIMPLE_KEY zoc bool}
 	{SIMPLE_KEY flying bool}
 	{LINK_TAG "units/$modifications/trait"}
