--- a/data/test/scenarios/test_move.cfg
+++ b/data/test/scenarios/test_move.cfg
@@ -65,5 +65,7 @@
 {MOVE_MALFORMED_SCEN test_move_fail_2 (16,15,14,13,12,11) (3,3,3,3,3,3,3)}
 {MOVE_MALFORMED_SCEN test_move_fail_3 (16,15,14,13,12,11) (3,3,3,3,3)}
 {MOVE_MALFORMED_SCEN test_move_fail_4 (16,15,14,13,12) (3,3,3,3,3,3)}
+#ifndef SCHEMA_SHOULD_SKIP_THIS
 {MOVE_MALFORMED_SCEN test_move_fail_5 (16,15,chicken,13,12,11) (3,3,3,3,3,3)}
 {MOVE_MALFORMED_SCEN test_move_fail_6 (16,15,14,13,12,11) (3,3,3,3,3,bock)}
+#endif
