--- a/data/campaigns/Northern_Rebirth/scenarios/02_01_Infested_Caves.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/02_01_Infested_Caves.cfg
@@ -125,7 +125,7 @@
         # The second one suplements him, he hinders units to overcome his ZoC.
         # The Steelwart can't move; the Fighter is controlled by an Micro AI.
         {NOTRAIT_UNIT 4 "Dwarvish Steelclad" 31 28} {GUARDIAN} {NO_UPKEEP} {FACING se}
-        {NAMED_NOTRAIT_UNIT () "Dwarvish Fighter" 27 28 (dwarvish_return_guard) ()} {NO_UPKEEP}
+        {NAMED_NOTRAIT_UNIT 4 "Dwarvish Fighter" 27 28 (dwarvish_return_guard) ()} {NO_UPKEEP}
 
         {NOTRAIT_UNIT 4 "Dwarvish Stalwart" 28 21} {GUARDIAN} {NO_UPKEEP}
         {NOTRAIT_UNIT 4 "Dwarvish Stalwart" 32 21} {GUARDIAN} {NO_UPKEEP}
@@ -172,8 +172,8 @@
             [/avoid]
         [/ai]
 
-        {NOTRAIT_UNIT () "Troll Rocklobber" 39 5} {GUARDIAN} {NO_UPKEEP}
-        {NOTRAIT_UNIT () "Troll Rocklobber" 39 11} {GUARDIAN} {NO_UPKEEP}
+        {NOTRAIT_UNIT 6 "Troll Rocklobber" 39 5} {GUARDIAN} {NO_UPKEEP}
+        {NOTRAIT_UNIT 6 "Troll Rocklobber" 39 11} {GUARDIAN} {NO_UPKEEP}
     [/side]
 
     [side]
@@ -209,7 +209,7 @@
         canrecruit=yes
 
         # controlled by Micro AI, more meatshield than guard
-        {NAMED_NOTRAIT_UNIT () "Skeleton Archer" 24 2 (skeleton_return_guard) ()} {NO_UPKEEP}
+        {NAMED_NOTRAIT_UNIT 8 "Skeleton Archer" 24 2 (skeleton_return_guard) ()} {NO_UPKEEP}
     [/side]
 
     # And an empty side for the bat used in flavor event
