--- a/data/schema/units/modifications.cfg
+++ b/data/schema/units/modifications.cfg
@@ -225,4 +225,6 @@
 	max=infinite
 	super="units/$modifications/base"
 	{SIMPLE_KEY duration object_duration}
+	{FILTER_TAG "filter" unit ()}
+	{ANY_KEY string}
 [/tag]
