--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Invaders.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Invaders.cfg
@@ -174,7 +174,7 @@
         [objectives]
             side=1
             [objective]
-                description= _ "Defeat all enemies"
+                description= _ "Defeat the orcish leaders"
                 condition=win
             [/objective]
             [objective]
