Support [disallow_end_turn]reason= and use it in the tutorial

--- a/data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg
+++ b/data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg
@@ -132,7 +132,9 @@
 
         # We don't want players ending their turn before the requisite actions have been completed
         # Therefor, we frequently disallow or allow end turn as needed
-        [disallow_end_turn][/disallow_end_turn]
+        [disallow_end_turn]
+            reason=_"You cannot end your turn until you have completed the lesson on movement!"
+        [/disallow_end_turn]
     [/event]
 
     [event]
@@ -519,6 +521,10 @@
                 message= _"To attack the quintain, first select the attacker (Li’sar), then the target (the quintain). You will see an attack description. Click <b>Attack</b> when you’re ready."
             [/message]
         )}
+        
+        [disallow_end_turn]
+            reason=_"You cannot end your turn until you have attacked the dummy!"
+        [/disallow_end_turn]
     [/event]
 
     # First time the student attacks the quintain
@@ -620,7 +626,9 @@
     [event]
         name=turn 2
 
-        [disallow_end_turn][/disallow_end_turn]
+        [disallow_end_turn]
+            reason=_"You cannot end your turn until you have completed the lesson on healing!"
+       [/disallow_end_turn]
 
         # works around the situation that the player can't do anything anymore
         # if he disobeys orders - inserts [allow_end_turn][/allow_end_turn]
@@ -685,7 +693,9 @@
     [event]
         name=turn 3 refresh
 
-        [disallow_end_turn][/disallow_end_turn]
+        [disallow_end_turn]
+            reason=_"You cannot end your turn until you have completed the lesson on recruiting!"
+       [/disallow_end_turn]
 
         {ALLOW_END_TURN_AFTER_ATTACK}
 
@@ -815,7 +825,9 @@
             radius=1    # hexes next to the first quintain
         [/store_locations]
 
-        [disallow_end_turn][/disallow_end_turn]
+        [disallow_end_turn]
+            reason=_"You cannot end your turn until you have completed the lesson on attacking!"
+       [/disallow_end_turn]
 
         {ALLOW_END_TURN_AFTER_ATTACK}
 
