--- a/data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg
+++ b/data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg
@@ -175,7 +175,9 @@
             [/then]
         [/if]
 
-        [disallow_end_turn][/disallow_end_turn]
+        [disallow_end_turn]
+            reason=_"You cannot end your turn until you have recruited troops and captured a village!"
+        [/disallow_end_turn]
     [/event]
 
     [event]
