--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -294,7 +294,12 @@
 		{SIMPLE_KEY add s_int}
 		{SIMPLE_KEY current s_unsigned}
 	[/tag]
-	{EMPTY_TAG "allow_end_turn,disallow_end_turn" 0 infinite}
+	{EMPTY_TAG "allow_end_turn" 0 infinite}
+	[tag]
+		name="disallow_end_turn"
+		max=infinite
+		{DEFAULT_KEY reason t_string ""}
+	[/tag]
 	[tag]
 		name="capture_village"
 		max=infinite
