TSG story text: fixed typos

--- a/data/campaigns/The_South_Guard/utils/sg_story.cfg
+++ b/data/campaigns/The_South_Guard/utils/sg_story.cfg
@@ -133,7 +133,7 @@
         [/part]
         [part]
             background=story/winter.jpg
-            story= _ "Finally, as the snow melted and green buds marked the onset of spring, Deoran knew the time had come to report back to King Haldric. He bade the people of Westin farewell and made his journal northward to Weldyn. While years of rebuilding lay ahead for Kerlath, they would take place in peace thanks to Deoran's leadership and the heroics of the South Guard."
+            story= _ "Finally, as the snow melted and green buds marked the onset of spring, Deoran knew the time had come to report back to King Haldric. He bade the people of Westin farewell and made his journey northward to Weldyn. While years of rebuilding lay ahead for Kerlath, they would take place in peace thanks to Deoran's leadership and the heroics of the South Guard."
             music=traveling_minstrels.ogg
         [/part]
     [/story]
@@ -174,7 +174,7 @@
 
         [part]
             background=story/winter.jpg
-            story= _ "Finally, as the snow melted and green buds marked the onset of spring, Deoran knew the time had come to report back to King Haldric. He bade the people of Westin farewell and made his journal northward to Weldyn. While years of rebuilding lay ahead for Kerlath, they would take place in peace thanks to Deoran's leadership and the heroics of the South Guard."
+            story= _ "Finally, as the snow melted and green buds marked the onset of spring, Deoran knew the time had come to report back to King Haldric. He bade the people of Westin farewell and made his journey northward to Weldyn. While years of rebuilding lay ahead for Kerlath, they would take place in peace thanks to Deoran's leadership and the heroics of the South Guard."
             music=traveling_minstrels.ogg
         [/part]
     [/story]
