TSG S2: changed dialogue wording

--- a/data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg
@@ -694,7 +694,7 @@
 
         [message]
             speaker=Sir Gerrick
-            message= _ "Indeed. Still, this victory is troubling. How can a mere highwayman have summoned undead?"
+            message= _ "Indeed. Still, this victory is troubling. How can a mere outlaw have summoned undead?"
         [/message]
 
         [fire_event]
