Fix issues with classic theme

--- a/data/themes/classic.cfg
+++ b/data/themes/classic.cfg
@@ -260,15 +260,6 @@
             xanchor=fixed
             yanchor=fixed
         [/label]
-        [label]
-            id=battery-icon
-            icon=themes/battery.png
-            text= _ "battery"
-            ref=battery-panel
-            rect="=+5,=+1,+25,+17"
-            xanchor=fixed
-            yanchor=fixed
-        [/label]
 
         [status]
             # the time of day image
@@ -352,8 +343,8 @@
             [battery]
                 id=status-battery
                 font_size={DEFAULT_FONT_SMALL}
-                ref=battery-icon
-                rect="+4,=,+50,+16"
+                ref=battery-panel
+                rect="=+5,=+1,+70,+18"
                 xanchor=fixed
                 yanchor=fixed
                 prefix="" #wmllint: ignore
@@ -535,6 +526,25 @@
                 yanchor=fixed
             [/unit_status]
         [/status]
+
+        # If the device has no battery, remove the battery charge indicator
+        # and move the timer to its position.
+        [no_battery]
+            [remove]
+                id=battery
+            [/remove]
+            [remove]
+                id=timeout-panel
+            [/remove]
+            [remove]
+                id=time-icon
+            [/remove]
+            [change]
+                id=report_countdown
+                ref=battery-panel
+                rect="=+5,=+1,+70,+18"
+            [/change]
+        [/no_battery]
 
         {CLASSIC_REPLAY_THEME {DEFAULT_FONT_SMALL}}
     [/resolution]
