Tips: Incorporate suggestion from #3683
https://github.com/wesnoth/wesnoth/pull/3683#issuecomment-439703953

--- a/data/tips.cfg
+++ b/data/tips.cfg
@@ -258,7 +258,7 @@
     source= _ "<i>― The Wesnoth Tactical Guide</i>"
 [/tip]
 [tip]
-    text= _ "Some higher-level units have inimitable abilities such as <i>Leadership</i>, <i>Cures</i>, or <i>Nightstalk</i>. Advancing those units early can make a big difference in a campaign."
+    text= _ "Some higher-level units have inimitable abilities such as <i>Leadership</i>, <i>Cures</i>, or <i>Nightstalk</i>. Obtaining those units early can make a big difference in a campaign."
     source= _ "<i>― Sir Gerrick of Westin, 607YW</i>"
 [/tip]
 #ifdef __UNUSED__
