--- a/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
@@ -374,11 +374,6 @@
                     message= _ "The mages taught me enough. You won’t truly banish me, will you, Drogan?"
                 [/message]
 
-                [message]
-                    speaker=Drogan
-                    message= _ "Begone, now. I’ve no wish to be forced to send the soldiers after you. Your father would be ashamed to see the end to which you’ve come."
-                [/message]
-
                 # Hint that the loyal units stay behind
                 [message]
                     side=1
@@ -386,7 +381,12 @@
                     [not]
                         id=Malin Keshar
                     [/not]
-                    message= _ "Goodbye, commander."
+                    message= _ "We should all be glad to see you gone, necromancer. I detest having fought by your side."
+                [/message]
+
+                [message]
+                    speaker=Drogan
+                    message= _ "Begone, now. I’ve no wish to be forced to send the soldiers after you. Your father would turn in his grave did he see the end to which you’ve come."
                 [/message]
             [/then]
             [else]
