TSG S5: dialogue fix

--- a/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
@@ -1085,7 +1085,7 @@
                 [/message]
                 [message]
                     speaker=Deoran
-                    message= _ "Bah, it is not like we have a choice. Very well, you will lead us back to Westin, and we will grant your pardon so long as you do not try any more trickery. But this does not solve the problem of the undead! They will keep attacking us unless we root them out at the source."
+                    message= _ "Bah, it is not like we have a choice. Very well, you will lead us back to Westin, and we will grant your pardon so long as you do not try any more trickery. But this does not solve the problem of the undead!"
                 [/message]
                 [message]
                     speaker=Urza Afalas
