TSG S5: fixed Urza Afalas upkeep bug

--- a/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
@@ -868,6 +868,19 @@
 
                             [show_objectives][/show_objectives]
 
+                            [store_unit]
+                                [filter]
+                                    id=Urza Afalas
+                                [/filter]
+                                variable=Afalas
+                                kill=no
+                            [/store_unit]
+                            {CLEAR_VARIABLE Afalas.upkeep}
+                            [unstore_unit]
+                                variable=Afalas
+                            [/unstore_unit]
+                            {CLEAR_VARIABLE Afalas}
+
                             # give side 4 some gold
                             [gold]
                                 side=4
