TSG S6b: minor QOL tweaks

--- a/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
@@ -128,15 +128,15 @@
         {VARIABLE secret_path.y 35}
 
 
-    # the first undead will spawn on this turn+1 (i.e. turn {5 4 3})
+    # the first undead will spawn on this turn+1 (i.e. turn {6 5 4})
 #ifdef EASY
-        {VARIABLE first_undead_spawn_turn 4}
+        {VARIABLE first_undead_spawn_turn 5}
 #endif
 #ifdef NORMAL
-        {VARIABLE first_undead_spawn_turn 3}
+        {VARIABLE first_undead_spawn_turn 4}
 #endif
 #ifdef HARD
-        {VARIABLE first_undead_spawn_turn 2}
+        {VARIABLE first_undead_spawn_turn 3}
 #endif
 
         [while]
@@ -706,10 +706,17 @@ _f, _f, Re, _f
             variable=secret_path_unrevealed
         [/store_locations]
 
-        [scroll_to_unit]
-            id=Urza Afalas
-        [/scroll_to_unit]
-
+        [if]
+            [variable]
+                name=secret_path_unrevealed.length
+                greater_than=0
+            [/variable]
+            [then]
+                [scroll_to_unit]
+                    id=Urza Afalas
+                [/scroll_to_unit]
+            [/then]
+        [/if]
         [foreach]
             array=secret_path_to_reveal
             [do]
