Fix schema validation error.

--- a/data/campaigns/Northern_Rebirth/scenarios/02_01_Infested_Caves.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/02_01_Infested_Caves.cfg
@@ -843,7 +843,9 @@
             ai_type=return_guardian
             action=add
 
-            id=dwarvish_return_guard
+            [filter]
+                id=dwarvish_return_guard
+            [/filter]
             return_x,return_y=27,28
         [/micro_ai]
     [/event]
@@ -858,7 +860,9 @@
             ai_type=return_guardian
             action=add
 
-            id=skeleton_return_guard
+            [filter]
+                id=skeleton_return_guard
+            [/filter]
             return_x,return_y=24,2
         [/micro_ai]
     [/event]
