TSG S8b: adjusted side 2 starting gold

--- a/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
@@ -61,7 +61,7 @@
         user_team_name=_"Undead"
         controller=ai
 
-        {GOLD 200 250 300}
+        {GOLD 250 300 350}
         {INCOME 20 25 30}
 
         canrecruit=yes
@@ -369,6 +369,7 @@
     [/event]
 
     {STARTING_VILLAGES 1 $village_radius}
+    {STARTING_VILLAGES_AREA 1 8 16 1}
     {STARTING_VILLAGES 2 5}
     {STARTING_VILLAGES 3 5}
 
