TSG S7b: adjusted enemy gold

--- a/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg
@@ -60,7 +60,7 @@
         user_team_name=_"Undead"
         controller=ai
 
-        {GOLD 150 200 250}
+        {GOLD 200 275 350}
         {INCOME 10 15 20}
 
         canrecruit=yes
@@ -90,7 +90,7 @@
         user_team_name=_"Undead"
         controller=ai
 
-        {GOLD 100 125 150}
+        {GOLD 125 175 225}
         {INCOME 9 12 15}
 
         canrecruit=yes
@@ -164,30 +164,30 @@
         {LOYAL_UNDEAD_UNIT 2 Skeleton 4 12}
         {LOYAL_UNDEAD_UNIT 2 Skeleton 21 13}
         {LOYAL_UNDEAD_UNIT 2 Skeleton 29 16}
-        {LOYAL_UNDEAD_UNIT 2 (Vampire Bat) 2 14}
-        {LOYAL_UNDEAD_UNIT 2 (Vampire Bat) 9 13}
-        {LOYAL_UNDEAD_UNIT 2 (Vampire Bat) 23 16}
-        {LOYAL_UNDEAD_UNIT 2 (Vampire Bat) 32 10}
+        {LOYAL_UNIT 2 (Vampire Bat) 2 14}
+        {LOYAL_UNIT 2 (Vampire Bat) 9 13}
+        {LOYAL_UNIT 2 (Vampire Bat) 23 16}
+        {LOYAL_UNIT 2 (Vampire Bat) 32 10}
 #endif
 #ifdef NORMAL
         {LOYAL_UNDEAD_UNIT 2 Chocobone 18 14}
         {LOYAL_UNDEAD_UNIT 2 Skeleton 4 12}
         {LOYAL_UNDEAD_UNIT 2 Skeleton 21 13}
         {LOYAL_UNDEAD_UNIT 2 Revenant 29 16}
-        {LOYAL_UNDEAD_UNIT 2 (Vampire Bat) 2 14}
-        {LOYAL_UNDEAD_UNIT 2 (Blood Bat) 9 13}
-        {LOYAL_UNDEAD_UNIT 2 (Vampire Bat) 23 16}
-        {LOYAL_UNDEAD_UNIT 2 (Blood Bat) 32 10}
+        {LOYAL_UNIT 2 (Vampire Bat) 2 14}
+        {LOYAL_UNIT 2 (Blood Bat) 9 13}
+        {LOYAL_UNIT 2 (Vampire Bat) 23 16}
+        {LOYAL_UNIT 2 (Blood Bat) 32 10}
 #endif
 #ifdef HARD
         {LOYAL_UNDEAD_UNIT 2 Chocobone 18 14}
-        {LOYAL_UNDEAD_UNIT 2 Skeleton 4 12}
+        {LOYAL_UNDEAD_UNIT 2 Revenant 4 12}
         {LOYAL_UNDEAD_UNIT 2 Deathblade 21 13}
         {LOYAL_UNDEAD_UNIT 2 Revenant 29 16}
-        {LOYAL_UNDEAD_UNIT 2 (Blood Bat) 2 14}
-        {LOYAL_UNDEAD_UNIT 2 (Blood Bat) 9 13}
-        {LOYAL_UNDEAD_UNIT 2 (Blood Bat) 23 16}
-        {LOYAL_UNDEAD_UNIT 2 (Blood Bat) 32 10}
+        {LOYAL_UNIT 2 (Blood Bat) 2 14}
+        {LOYAL_UNIT 2 (Blood Bat) 9 13}
+        {LOYAL_UNIT 2 (Blood Bat) 23 16}
+        {LOYAL_UNIT 2 (Blood Bat) 32 10}
 #endif
 
 
@@ -224,6 +224,10 @@
         [recall]
             id=Urza Afalas
             x,y=15,8
+        [/recall]
+        [recall]
+            id=Minister Hylas
+            x,y=16,7
         [/recall]
 
         [message]
@@ -278,6 +282,10 @@
             speaker=Sir Gerrick
             message= _ "You know what the outcome of our battle here will be. I trust you to protect our home from the undead and only ask you to remember those who fell defending our land. Farewell, Sir Deoran!"
         [/message]
+        [message]
+            speaker=Minister Hylas
+            message= _ "The light shines upon your souls, brave warriors."
+        [/message]
 
         {MOVE_UNIT id=Deoran 16 5}
 
@@ -293,9 +301,24 @@
                 id=Deoran
             [/filter]
 
-            kill=yes
             variable=stored_Deoran
         [/store_unit]
+        [kill]
+            id=Deoran
+        [/kill]
+
+        {MOVE_UNIT id="Minister Hylas" 15 1}
+
+        [store_unit]
+            [filter]
+                id=Minister Hylas
+            [/filter]
+
+            variable=stored_Hylas
+        [/store_unit]
+        [kill]
+            id=Minister Hylas
+        [/kill]
 
         {MODIFY_UNIT (id=Sir Gerrick) overlays ""}
         {MODIFY_UNIT (id=Sir Gerrick) canrecruit yes}
@@ -352,10 +375,22 @@
 #endif
         [/gold]
     [/event]
-    
+
+    [event]
+        name=turn 3
+
+        [modify_side]
+            side=2
+            {INCOME 15 20 25}
+        [/modify_side]
+        [modify_side]
+            side=3
+            {INCOME 10 15 20}
+        [/modify_side]
+    [/event]
     [event]
         name=turn 6
-        
+
         [modify_side]
             side=2
             {INCOME 20 25 30}
@@ -366,8 +401,8 @@
         [/modify_side]
     [/event]
     [event]
-        name=turn 12
-        
+        name=turn 9
+
         [modify_side]
             side=2
             {INCOME 25 30 35}
@@ -378,8 +413,20 @@
         [/modify_side]
     [/event]
     [event]
-        name=turn 18
-        
+        name=turn 12
+
+        [modify_side]
+            side=2
+            {INCOME 30 35 40}
+        [/modify_side]
+        [modify_side]
+            side=3
+            {INCOME 25 30 35}
+        [/modify_side]
+    [/event]
+    [event]
+        name=turn 15
+
         [modify_side]
             side=2
             {INCOME 40 45 50}
@@ -387,6 +434,18 @@
         [modify_side]
             side=3
             {INCOME 35 40 45}
+        [/modify_side]
+    [/event]
+    [event]
+        name=turn 18
+
+        [modify_side]
+            side=2
+            {INCOME 50 55 60}
+        [/modify_side]
+        [modify_side]
+            side=3
+            {INCOME 45 50 55}
         [/modify_side]
     [/event]
 
@@ -442,9 +501,14 @@
 
         {VARIABLE stored_Deoran.x recall}
         {VARIABLE stored_Deoran.y recall}
+        {VARIABLE stored_Hylas.x recall}
+        {VARIABLE stored_Hylas.y recall}
 
         [unstore_unit]
             variable=stored_Deoran
+        [/unstore_unit]
+        [unstore_unit]
+            variable=stored_Hylas
         [/unstore_unit]
 
         # Set the amount of gold that the player has to what it was before Pebbles.
@@ -454,6 +518,7 @@
         [/modify_side]
         {CLEAR_VARIABLE pebbles_starting_gold}
         {CLEAR_VARIABLE stored_Deoran}
+        {CLEAR_VARIABLE stored_Hylas}
 
         # In case that matters if played as MP Campaign, make him vulnerable again
         [modify_unit]
