TSG: modified Hylas' death

--- a/data/campaigns/The_South_Guard/utils/sg_deaths.cfg
+++ b/data/campaigns/The_South_Guard/utils/sg_deaths.cfg
@@ -87,7 +87,7 @@
     [message]
         speaker=unit
         image=portraits/hylas.png
-        message= _ "Now I will never see Westin free again..."
+        message= _ "May the Light guide you where I have failed..."
     [/message]
 #ifndef SG_DEATHS_HYLAS_LATE
     [endlevel]
