--- a/data/schema/ai/_main.cfg
+++ b/data/schema/ai/_main.cfg
@@ -11,12 +11,14 @@
 [tag]
 	name="ais"
 	min=1
+	{SIMPLE_KEY default_ai_algorithm t_string}
 	[tag]
 		name="ai"
 		max=infinite
 		super="$ai"
 		{REQUIRED_KEY id string}
 		{SIMPLE_KEY name t_string}
+		{SIMPLE_KEY mp_rank unsigned}
 		{SIMPLE_KEY description t_string}
 		{DEFAULT_KEY hidden bool no}
 	[/tag]
