Schema validation: add missing AI aspect

--- a/data/schema/ai/modify.cfg
+++ b/data/schema/ai/modify.cfg
@@ -153,6 +153,7 @@
 		{AI_MODIFY_MATCH_ASPECT aggression real}
 		{AI_MODIFY_MATCH_ASPECT caution real}
 		{AI_MODIFY_MATCH_ASPECT leader_aggression real}
+		{AI_MODIFY_MATCH_ASPECT leader_value real}
 		{AI_MODIFY_MATCH_ASPECT scout_village_targeting real}
 		{AI_MODIFY_MATCH_ASPECT village_value real}
 		{AI_MODIFY_MATCH_ASPECT recruitment_diversity real}
