--- a/data/gui/window/preferences/02_hotkeys.cfg
+++ b/data/gui/window/preferences/02_hotkeys.cfg
@@ -50,7 +50,7 @@
 
 						[label]
 							definition = "default"
-							label = _ "Search:"
+							label = _ "Filter:"
 						[/label]
 					[/column]
 
