--- a/data/core/about.cfg
+++ b/data/core/about.cfg
@@ -1545,6 +1545,9 @@
         name = "RatArmy (fujimo-t)"
     [/entry]
     [entry]
+        name = "Reuben Rakete (rocketbang)"
+    [/entry]
+    [entry]
         name = "Richard Yao (srk9)"
         comment = "Bug fixes"
     [/entry]
