--- a/projectfiles/CodeBlocks/wesnothd.cbp
+++ b/projectfiles/CodeBlocks/wesnothd.cbp
@@ -110,11 +110,15 @@
 		<Unit filename="../../src/serialization/parser.hpp" />
 		<Unit filename="../../src/serialization/preprocessor.cpp" />
 		<Unit filename="../../src/serialization/preprocessor.hpp" />
+		<Unit filename="../../src/serialization/schema/key.cpp" />
+		<Unit filename="../../src/serialization/schema/key.hpp" />
+		<Unit filename="../../src/serialization/schema/tag.cpp" />
+		<Unit filename="../../src/serialization/schema/tag.hpp" />
+		<Unit filename="../../src/serialization/schema/type.cpp" />
+		<Unit filename="../../src/serialization/schema/type.hpp" />
 		<Unit filename="../../src/serialization/string_utils.cpp" />
 		<Unit filename="../../src/serialization/string_utils.hpp" />
 		<Unit filename="../../src/serialization/string_view.hpp" />
-		<Unit filename="../../src/serialization/tag.cpp" />
-		<Unit filename="../../src/serialization/tag.hpp" />
 		<Unit filename="../../src/serialization/tokenizer.cpp" />
 		<Unit filename="../../src/serialization/tokenizer.hpp" />
 		<Unit filename="../../src/serialization/unicode.cpp" />
